# magic_square

./: CMakeLists.txt  Matrix.cpp  Matrix.h  README.md  config.h  config.h.in  tests_main.cpp
tests/: MatrixTest.cpp
